{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 69,
  "lineage": "59baba55-0798-c315-f862-c473a1c25961",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c253746be72af4e9",
            "public_dns": "ec2-18-178-40-74.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.40.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08f05d55ff0cfc47d",
            "public_dns": "ec2-13-230-51-182.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.230.51.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ab0e7ea25cd5f7c8",
            "owner_id": "193546543446",
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c253746be72af4e9",
            "id": "nat-0e105cdf9ffd593f9",
            "network_interface_id": "eni-0f8148a0e9c559797",
            "private_ip": "10.0.64.106",
            "public_ip": "18.178.40.74",
            "subnet_id": "subnet-02d776b0fbe562d5c"
          },
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.igw",
            "aws_subnet.private_0",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f05d55ff0cfc47d",
            "id": "nat-04063a1e8a8947109",
            "network_interface_id": "eni-01e93f362688433f8",
            "private_ip": "10.0.65.229",
            "public_ip": "13.230.51.182",
            "subnet_id": "subnet-06b6d463985e36c43"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.igw",
            "aws_subnet.private_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c062c7d82725dce51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e105cdf9ffd593f9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c062c7d82725dce5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0",
            "aws_subnet.private_0",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e494eee43cf053311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04063a1e8a8947109",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e494eee43cf05331",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab0e7ea25cd5f7c8",
            "id": "r-rtb-08dda28f197e0b4591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08dda28f197e0b459",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c062c7d82725dce5",
            "owner_id": "193546543446",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e494eee43cf05331",
            "owner_id": "193546543446",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08dda28f197e0b459",
            "owner_id": "193546543446",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071820fb5d2fb618a",
            "route_table_id": "rtb-0c062c7d82725dce5",
            "subnet_id": "subnet-02d776b0fbe562d5c"
          },
          "dependencies": [
            "aws_route_table.private_0",
            "aws_subnet.private_0",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0271c997e1a987be4",
            "route_table_id": "rtb-0e494eee43cf05331",
            "subnet_id": "subnet-06b6d463985e36c43"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058a4851915df1a00",
            "route_table_id": "rtb-08dda28f197e0b459",
            "subnet_id": "subnet-0d6feca7ac60dc797"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_0",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043034d41727407d2",
            "route_table_id": "rtb-08dda28f197e0b459",
            "subnet_id": "subnet-0619f9f049b2d50b5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:security-group/sg-0a3b54b40858017fb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a3b54b40858017fb",
            "ingress": [],
            "name": "main",
            "name_prefix": null,
            "owner_id": "193546543446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-187135774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a3b54b40858017fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3594816792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a3b54b40858017fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-02d776b0fbe562d5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "id": "subnet-02d776b0fbe562d5c",
            "map_public_ip_on_launch": false,
            "owner_id": "193546543446",
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-06b6d463985e36c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.65.0/24",
            "id": "subnet-06b6d463985e36c43",
            "map_public_ip_on_launch": false,
            "owner_id": "193546543446",
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-0d6feca7ac60dc797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d6feca7ac60dc797",
            "map_public_ip_on_launch": true,
            "owner_id": "193546543446",
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-0619f9f049b2d50b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0619f9f049b2d50b5",
            "map_public_ip_on_launch": true,
            "owner_id": "193546543446",
            "vpc_id": "vpc-070c0614f5475038f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:vpc/vpc-070c0614f5475038f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3e0df1f6b2e046e",
            "default_route_table_id": "rtb-0c29544752a8bcd07",
            "default_security_group_id": "sg-009f3c4f23fabd0f6",
            "dhcp_options_id": "dopt-a1cce1c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-070c0614f5475038f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c29544752a8bcd07",
            "owner_id": "193546543446",
            "tags": {
              "Name": "test"
            }
          }
        }
      ]
    }
  ]
}